Change titles to slugs

--- a/data/categories/launching.json
+++ b/data/categories/launching.json
@@ -1,14 +1,14 @@
 {
   "title": "Launching",
   "companies": [
-    "Startuplister",
-    "PRX",
+    "startuplister",
+    "prx",
     "pr.co",
-    "BuzzSumo",
-    "JustReachOut",
-    "Hey Press",
+    "buzzsumo",
+    "justreachout",
+    "hey-press",
     "pressfarm",
-    "Nouncy",
-    "Publicize"
+    "nouncy",
+    "publicize"
   ]
 }
