--- a/data/categories/project-management.json
+++ b/data/categories/project-management.json
@@ -1,15 +1,15 @@
 {
   "title": "Project management",
   "companies": [
-    "Sendtask",
-    "Bynder Orbit",
-    "Asana",
-    "Basecamp",
-    "Pivotal Tracker",
-    "Kanban Tool",
-    "Blossom",
-    "Sprintly",
-    "TeamGantt",
-    "Codebase"
+    "sendtask",
+    "bynder-orbit",
+    "asana",
+    "basecamp",
+    "pivotal-tracker",
+    "kanban-tool",
+    "blossom",
+    "sprintly",
+    "teamgantt",
+    "codebase"
   ]
 }
